--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,7 +1,7 @@
 - hosts: localhost
   become: yes
   vars:
-    jenkins_hostname: localhost
+    jenkins_hostname: 172.22.94.87
     docker_users:
       - jenkins
   roles:
