--- a/playbook.yml
+++ b/playbook.yml
@@ -1,8 +1,7 @@
 - hosts: localhost
   become: yes
-  become_method: sudo
   vars:
-    jenkins_hostname: 172.21.53.1
+    jenkins_hostname: localhost
     docker_users:
       - jenkins
   roles:
