--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,7 @@
 - hosts: localhost
   become: yes
   become_method: sudo
-  become_user: frankker
+  become_user: sudo
   vars:
     ansible_become_pass: chingiap83
     jenkins_hostname: localhost
