--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,6 @@
 - hosts: localhost
   become: yes
-  become_user: frankker
+  become_method: enable
   vars:
     ansible_become_pass: chingiap83
     jenkins_hostname: localhost
